--- a/src/index.css
+++ b/src/index.css
@@ -573,3 +573,19 @@ html {
     clip: rect(1px, 9999px, 66px, 0);
   }
 }
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.animate-float {
+  animation: float 3s ease-in-out infinite;
+}
